demoapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-crm
  name: demo-crm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-crm
  template:
    metadata:
      labels:
        app: demo-crm
    spec:
      containers:
      - image: pwstaging/demo-crm:latest
        name: demo-crm
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-lb
spec:
  selector:
    app: demo-crm
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
      nodePort: 30000
