service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-crm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: demo-crm
  sessionAffinity: None
  type: ClusterIP
