manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-kubernetes
  template:
    metadata:
      labels:
        app: basic-kubernetes
    spec:
      containers:
      - image: cloudversityofficial/basic-kubernetes
        imagePullPolicy: "Always"
        name: basic-kubernetes
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic-kubernetes
  name: basic-kubernetes
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3001
  selector:
    app: basic-kubernetes

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-kubernetes
spec:
  # ingressClassName is necessary since v1.22 
  ingressClassName: nginx
  rules:
  - host: 34.165.206.5.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: basic-kubernetes
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-kubernetes-dns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  # ingressClassName is necessary since v1.22
  ingressClassName: nginx
  rules:
  - host: 34.165.206.5.nip.io
    http:
      paths:
      - path: /cloud-versity(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: basic-kubernetes
            port:
              number: 80
